edition = "2023";

package wayplatform.connect.mapon.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/mapon/v1/common.proto";
import "wayplatform/connect/mapon/v1/driver.proto";
import "wayplatform/connect/mapon/v1/fuel_type.proto";
import "wayplatform/connect/mapon/v1/reefer.proto";
import "wayplatform/connect/mapon/v1/unit_state.proto";
import "wayplatform/connect/mapon/v1/unit_type.proto";

option go_package = "github.com/way-platform/mapon-go/proto/gen/go/wayplatform/connect/mapon/v1;maponv1";

// Unit represents a vehicle or tracking unit in the Mapon system.
message Unit {
  // Unique identifier for the unit.
  int64 unit_id = 1;

  // Identifier of the company owning the unit.
  int64 company_id = 2;

  // User-defined label for the unit (e.g. "VOLVO FH").
  string label = 3;

  // Registration number or license plate.
  string number = 4;

  // Vehicle Identification Number (VIN).
  string vin = 5;

  // Type of the unit.
  UnitType type = 6;

  // The raw string value of the type if it is not one of the known UnitType enum values.
  // This field is populated only when 'type' is UNIT_TYPE_UNRECOGNIZED.
  string unrecognized_type = 7;

  // The current telemetry state of the unit.
  UnitState state = 8;

  // Device associated with the unit.
  Device device = 9;

  // Country code (ISO 3166-1 alpha-2).
  string country_code = 10;

  // Timestamp when the unit was created.
  google.protobuf.Timestamp created_at = 11;

  // Identifier of the tracking box/device (if available directly).
  int64 box_id = 12;

  // Icon name associated with the unit.
  string icon = 13;

  // Vehicle title.
  string vehicle_title = 14;

  // Car registration certificate number.
  string car_reg_certificate = 15;

  // Registration country.
  string reg_country = 16;

  // Fuel type.
  FuelType fuel_type = 17;

  // The raw string value of the fuel type if it is not one of the known FuelType enum values.
  // This field is populated only when 'fuel_type' is FUEL_TYPE_UNRECOGNIZED.
  string unrecognized_fuel_type = 18;

  // Unit shortcut identifier.
  string shortcut = 19;

  // Average fuel consumption information.
  FuelConsumption avg_fuel_consumption = 20;

  // Fuel tank capacity information.
  FuelTank fuel_tank = 21;

  // Vehicle technical details.
  TechnicalDetails technical_details = 22;

  // Movement state information (separate from the main state).
  MovementState movement_state = 23;

  // Connected trailer information.
  ConnectedTrailer connected = 24;

  // Objects where the unit is currently located.
  repeated ObjectLocation in_objects = 25;

  // Saved values from mappings.
  repeated SavedValue saved_values = 26;

  // List of drivers currently assigned to the unit.
  repeated Driver drivers = 27;

  // List of relays available on the unit.
  repeated Relay relays = 28;

  // Reefer (refrigeration unit) information.
  Reefer reefer = 29;

  // Device represents the tracking hardware installed in the unit.
  message Device {
    // Unique identifier of the device.
    int64 device_id = 1;

    // Serial number of the device.
    string serial_number = 2;

    // IMEI (International Mobile Equipment Identity) of the device.
    string imei = 3;

    // SIM card number.
    string sim = 4;
  }

  // Relay represents a controllable relay on the unit.
  message Relay {
    // Unique identifier of the relay (1-based index).
    int32 relay_id = 1;

    // Current state (0 = off, 1 = on).
    int32 relay_state = 2;

    // Type of relay (e.g., "basic").
    string type = 3;

    // User-defined title/label for the relay.
    string title = 4;

    // Whether the logic is inverted.
    int32 inverted = 5;

    // Whether control is allowed while moving.
    int32 control_while_moving = 6;

    // Whether the relay is enabled.
    int32 enabled = 7;
  }

  // FuelConsumption represents average fuel consumption data.
  message FuelConsumption {
    // Normal consumption value.
    double norm = 1;

    // Measurement unit (e.g., "l/100km", "l/h", "kg/100km").
    string measurement = 2;
  }

  // FuelTank represents fuel tank capacity information.
  message FuelTank {
    // Total volume of all tanks in liters.
    double total_vol_l = 1;

    // Individual tank volumes (tank index -> volume in liters).
    map<int32, double> tank_volumes_l = 2;
  }

  // TechnicalDetails represents vehicle technical information.
  message TechnicalDetails {
    // Stage classification (e.g., "Stage2").
    string stage_classification = 1;

    // Emission class (e.g., "Euro1", "Euro6").
    string emission_class = 2;

    // Gross weight in kilograms.
    int64 gross_weight_kg = 3;

    // Manufacturing year.
    string make_year = 4;

    // Manufacturing month.
    string make_month = 5;

    // Power in PS (Pferdest√§rke).
    int32 power_ps = 6;

    // Power in kilowatts.
    int32 power_kw = 7;

    // Cubic capacity in liters.
    double cubic_capacity_l = 8;

    // CO2 emissions information.
    CO2Emissions co2_emissions = 9;
  }

  // CO2Emissions represents CO2 emission data.
  message CO2Emissions {
    // Emission value.
    string value = 1;

    // Metrics unit (e.g., "g/km").
    string metrics = 2;
  }

  // MovementState represents movement state information.
  message MovementState {
    // Movement status name (e.g., "driving", "standing").
    string name = 1;

    // Timestamp when this movement state started.
    google.protobuf.Timestamp start = 2;

    // Duration of this movement state in seconds.
    int64 duration_s = 3;
  }

  // ConnectedTrailer represents information about a connected trailer.
  message ConnectedTrailer {
    // Unit ID of the connected trailer.
    string unit_id = 1;

    // Type of the connected unit (e.g., "trailer").
    string type = 2;

    // Location of the connected trailer.
    Location location = 3;
  }

  // ObjectLocation represents an object where the unit is located.
  message ObjectLocation {
    // Object ID.
    string object_id = 1;

    // Object name.
    string name = 2;
  }

  // SavedValue represents a saved value from mappings.
  message SavedValue {
    // Key name.
    string key = 1;

    // Value.
    string value = 2;

    // Timestamp when the value was saved.
    google.protobuf.Timestamp gmt = 3;
  }
}
